--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<footer class="footer">
+  <div class="caption">
+    Copyright &copy; Sebastian-Laurentiu Gabor. All rights reserved.
+  </div>
+</footer>
