--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,1 +1,64 @@
-<p>contact works!</p>
+<div class="container d-flex">
+  <div class="contact-form d-flex">
+    <input
+      class="contact-form_item"
+      id="name"
+      type="text"
+      name="name"
+      required
+      placeholder="NAME"
+    />
+    <input
+      class="contact-form_item"
+      id="mail"
+      type="text"
+      name="email"
+      required
+      placeholder="EMAIL"
+    />
+    <textarea
+      class="contact-form_item"
+      id="textarea"
+      name="message"
+      id="message"
+      cols="30"
+      rows="10"
+      required
+      placeholder="MESSAGE"
+    ></textarea>
+    <button class="send-btn">
+      <div class="alt-send-btn">
+        <i class="fa-sharp fa-solid fa-paper-plane btn-icon"></i>
+        <p class="btn-text">SEND</p>
+      </div>
+    </button>
+  </div>
+  <div class="direct-contact d-flex">
+    <div class="d-flex">
+      <i class="fa-solid fa-location-dot direct-contact_icon"></i>
+      <p>Iasi, Romania</p>
+    </div>
+    <div class="d-flex">
+      <i class="fa-solid fa-phone direct-contact_icon"></i>
+      <p>0723423523</p>
+    </div>
+    <div class="d-flex">
+      <i class="fa-solid fa-envelope direct-contact_icon"></i>
+      <p>shineify@shineify.com</p>
+    </div>
+
+    <div class="line"></div>
+    <ul class="social d-flex">
+      <li class="social--item">
+        <a href=""><i class="fa-brands fa-facebook"></i></a>
+      </li>
+      <li class="social--item">
+        <a href=""><i class="fa-brands fa-instagram"></i></a>
+      </li>
+      <li class="social--item">
+        <a href=""><i class="fa-brands fa-twitter"></i></a>
+      </li>
+    </ul>
+    <div class="line"></div>
+  </div>
+</div>
