--- a/src/app/components/reviews/review/review.component.scss
+++ b/src/app/components/reviews/review/review.component.scss
@@ -18,6 +18,10 @@
   }
 }
 
+.card h3 {
+  color: #fff;
+}
+
 .card--image {
   border-radius: 100%;
   border: 2px solid var(--image-border-color);
